[Related to: #72] email formatted and update Spring boots